<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <packaging>pom</packaging>
  <name>swf-all</name>
  <description>All components of succinct web framework</description>
  <url>http://www.succinct.in</url>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>
  <groupId>com.github.venkatramanm.swf-all</groupId>
  <artifactId>swf-all</artifactId>
  <version>${revision}</version>
  <properties>
    <revision>2.6-SNAPSHOT</revision>
  </properties>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <versionRange>[1.0.0,)</versionRange>
                    <goals>
                      <goal>enforce</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore/>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.9</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
              <configuration>
                <additionalparam>-Xdoclint:none</additionalparam>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <source>8</source>
            <target>8</target>
          </configuration>
        </plugin>



      </plugins>
    </pluginManagement>
    <plugins>
        <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>flatten-maven-plugin</artifactId>
      <version>1.0.0</version>
      <configuration>
        <updatePomFile>true</updatePomFile>
      </configuration>
      <executions>
        <execution>
          <id>flatten</id>
          <phase>process-resources</phase>
          <goals>
            <goal>flatten</goal>
          </goals>
        </execution>
        <execution>
          <id>flatten.clean</id>
          <phase>clean</phase>
          <goals>
            <goal>clean</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
    </plugins>
  </build>
  <licenses>
    <license>
      <name>MIT</name>
      <url>LICENSE.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git@github.com:venkatramanm/swf-all.git</connection>
    <developerConnection>scm:git:git@github.com:venkatramanm/swf-all.git</developerConnection>
    <url>git@github.com:venkatramanm/swf-all.git</url>
  </scm>
  <developers>
    <developer>
      <id>venky</id>
      <name>Venkatraman Mahadevan</name>
      <email>venky@succinct.in</email>
    </developer>
  </developers>
  <modules>
    <module>swf-db</module>
    <module>swf-db-io-xml</module>
    <module>swf-db-io-json</module>
    <module>swf-db-io-xls</module>
    <module>swf</module>
    <module>swf-archetype</module>
    <module>swf-plugin-archetype</module>
    <module>swf-maven-plugin</module>
    <module>swf-plugin-templates</module>
    <module>swf-plugin-collab</module>
    <module>swf-plugin-bugs</module>
    <module>swf-plugin-mail</module>
    <module>swf-plugin-datamart</module>
  </modules>
</project>
